[tool.poetry]
name = "test_pyright"
version = "0.1.0"
description = ""
authors = ["Martin Bernstorff <martinbernstorff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]